name:                linguist
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable linguist
  main-is:             Main.hs
  other-modules:
    Linguist.Brick,
    Linguist.ParseLanguage,
    Linguist.ParseSyntaxDescription,
    Linguist.ParseUtil,
    Linguist.Proceed,
    Linguist.Types,
    Linguist.Util,
    Linguist.Languages.SimpleExample,
    Linguist.Languages.Stlc,
    Linguist.Languages.TExample,
    Text.Megaparsec.Char.LexerAlt
  -- other-extensions:
  build-depends:
    base >=4.11 && <4.12,
    mtl,
    containers,
    text,
    prettyprinter,
    brick == 0.38,
    vty == 5.22,
    zippers,
    lens,
    easytest,
    mmorph,
    megaparsec,
    neat-interpolation
  hs-source-dirs:      src
  default-language:    Haskell2010
