name:                linguist
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable linguist
  main-is:             Main.hs
  other-modules:
    Linguist.Brick,
    Linguist.FunctorUtil,
    Linguist.ParseLanguage,
    Linguist.ParseSyntaxDescription,
    Linguist.ParseUtil,
    Linguist.Proceed,
    Linguist.Proceed2,
    Linguist.TH,
    Linguist.Types,
    Linguist.Util,
    Linguist.Languages.Arith,
    Linguist.Languages.Arith.Syntax,
    Linguist.Languages.Document,
    Linguist.Languages.Document.Syntax,
    Linguist.Languages.SimpleExample,
    Linguist.Languages.Stlc,
    Linguist.Languages.TExample,
    Linguist.Languages.MachineModel,
    Linguist.ParseDenotationChart,
    Text.Megaparsec.Char.LexerAlt
  -- other-extensions:
  build-depends:
    base >=4.11 && <4.12,
    mtl,
    containers,
    text,
    prettyprinter,
    prettyprinter-ansi-terminal,
    brick >= 0.41,
    vty >= 5.25,
    zippers,
    lens,
    easytest,
    mmorph,
    megaparsec,
    neat-interpolation,
    data-diverse,
    data-diverse-lens,
    cmark,
    cmark-patterns,
    template-haskell >= 2.4 && < 2.15,
    recursion-schemes,
    free,
    multirec >= 0.7.8,
    hedgehog,
    cborg,
    serialise,
    cryptohash-sha256,
    bytestring,
    sbv,
    writer-cps-mtl,
    transformers >= 0.5.5
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:
    LambdaCase,
    TypeOperators,
    PatternSynonyms,
    MultiParamTypeClasses,
    GADTs,
    TupleSections,
    ScopedTypeVariables,
    OverloadedStrings,
    TypeApplications,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    Rank2Types,
    MultiWayIf,
    GeneralizedNewtypeDeriving
