cabal-version:       2.2
name:                lvca
version:             0.1.0.0
synopsis:            Language Verification, Construction, and Automation
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
copyright:           (c) 2018-2019 Joel Burget
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md

common core-deps
  build-depends:
    base >=4.11 && <4.12,
    bifunctors,
    brick >= 0.41,
    bytestring,
    cborg,
    containers,
    cryptohash-sha256,
    data-diverse,
    data-diverse-lens,
    deriving-compat,
    free,
    lens,
    matchable >= 0.1.2,
    matchable-th,
    megaparsec,
    mtl,
    neat-interpolation,
    prettyprinter,
    prettyprinter-ansi-terminal,
    recursion-schemes,
    serialise,
    symmetric-properties >= 0.1.0.1,
    template-haskell >= 2.4 && < 2.15,
    text,
    transformers >= 0.5.5,
    vty >= 5.25,
    writer-cps-mtl,
    zippers,

common extra-deps
  build-depends:
    cmark,
    cmark-patterns,
    hedgehog,
    sbv,

common extensions
  default-extensions:
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    DeriveGeneric,
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    OverloadedStrings,
    PatternSynonyms,
    Rank2Types,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    TypeOperators,
    TypeSynonymInstances

common library-modules

library
  import: extensions, core-deps
  exposed-modules:
    Lvca
    Lvca.Brick
    Lvca.FunctorUtil
    Lvca.Languages.Edits
    Lvca.Languages.MachineModel
    Lvca.ParseDenotationChart
    Lvca.ParseLanguage
    Lvca.ParseSyntaxDescription
    Lvca.ParseUtil
    Lvca.Proceed
    Lvca.TH
    Lvca.Types
    Lvca.Util
    Text.Megaparsec.Char.LexerAlt
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lvca
  import:         extensions, core-deps, extra-deps
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  lvca

test-suite tests
  import:           extensions, core-deps, extra-deps
  main-is:          tests.hs
  other-modules:
    Languages.Arith
    Languages.Document
    Languages.SimpleExample
    Languages.Stlc
    Languages.TExample
    Test.ParseLanguage
    Test.Types
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    lvca, easytest
