cabal-version:       2.2
name:                lvca
version:             0.1.0.0
synopsis:            Language Verification, Construction, and Automation
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
copyright:           (c) 2018-2019 Joel Burget
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md

common core-deps
  build-depends:
    Earley >= 0.13,
    aeson,
    base >=4.11 && <4.13,
    brick >= 0.41,
    bytestring,
    cborg,
    containers,
    cryptohash-sha256,
    deriving-compat,
    free,
    lens,
    matchable >= 0.1.2,
    megaparsec,
    mtl,
    neat-interpolation,
    prettyprinter,
    prettyprinter-ansi-terminal,
    recursion-schemes,
    serialise,
    text,
    transformers >= 0.5.5,
    vector,
    vty >= 5.25,
    zippers,

common extensions
  default-extensions:
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    DeriveGeneric,
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    OverloadedStrings,
    PatternSynonyms,
    Rank2Types,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    TypeOperators,
    TypeSynonymInstances

common library-modules

library
  import: extensions, core-deps
  exposed-modules:
    Lvca
    Lvca.Bidirectional
    Lvca.Brick
    Lvca.Core
    Lvca.DenotationChart
    Lvca.EarleyParseTerm
    Lvca.Judgements
    Lvca.ParseBidirectional
    Lvca.ParseConcreteSyntaxDescription
    Lvca.ParseDenotationChart
    Lvca.ParseLanguage
    Lvca.ParseTerm
    Lvca.ParseSyntaxDescription
    Lvca.ParseUtil
    Lvca.Printer
    Lvca.SyntaxComponents
    Lvca.TokenizeConcrete
    Lvca.Types
    Lvca.Util
    Text.Megaparsec.Char.LexerAlt
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  import:           extensions, core-deps
  main-is:          tests.hs
  other-modules:
    Languages.Arith
    Languages.Document
    Languages.SimpleExample
    Languages.Stlc
    Languages.TExample
    Test.Bidirectional
    Test.Core
    Test.ParseBidirectional
    Test.ParseConcreteSyntaxDescription
    Test.ParseTerm
    Test.Types
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    lvca,
    cmark,
    cmark-patterns,
    data-diverse,
    data-diverse-lens,
    easytest >= 0.3,
    hedgehog,
    sbv,
    writer-cps-mtl,

executable futamura
  main-is: Futamura.hs
  build-depends: base, containers, Earley, lvca, megaparsec, mtl, text, prettyprinter, haskeline
